fix: align nav items

--- a/Neumorphism_UI/style.css
+++ b/Neumorphism_UI/style.css
@@ -472,12 +472,17 @@ hr {
         grid-template-rows: 30px 40px;
     }
 
+    .time_cont {
+        padding-inline-start: 15px;
+    }
+
     .wifi_battery {
         margin-left: 48px;
     }
 
     .hamburger_menu {
         margin-top: 8px;
+        padding-inline-start: 12px;
     }
 
     .hamburger_icon {
@@ -490,7 +495,7 @@ hr {
     }
 
     .personal_card {
-        margin: 0 0 14px 28px;
+        margin: 0 0 14px 19px;
     }
 
     .visa_card_container {
